fixed home overlay z-index

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -14,7 +14,7 @@ $light-green: #225b68;
     height: 100vh;
     opacity: 0;
     background-color: $dark-green;
-    z-index: 999;
+    z-index: 3;
     color: $light-green;
     animation: 5s overlayFadeOut;
     animation-fill-mode: forwards;
